fixed spacing on small comments

--- a/src/assets/css/upvotecomment.css
+++ b/src/assets/css/upvotecomment.css
@@ -1,4 +1,4 @@
 .vote-container {
     position: relative;
-    bottom: 15px;
+    bottom: 10px;
 }
